Modification noms de variables et méthodes, modification JavaDoc, modification README.md